--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "gulp": "^3.9.1",
     "gulp-cli": "^2.0.0",
     "mocha": "^4.1.0",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "jsdom": "^11.5.1",
+    "jsdom-global": "^3.0.2"
   },
   "babel": {
     "presets": [
