--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "chai": "^4.1.2",
     "gulp": "^3.9.1",
     "gulp-cli": "^2.0.0",
+    "gulp-tslint": "^8.1.3",
+    "gulp-typescript": "^4.0.1",
     "jsdom": "^11.5.1",
     "jsdom-global": "^3.0.2",
+    "merge2": "^1.2.1",
     "mocha": "^4.1.0",
     "nightwatch": "^0.9.19",
-    "vinyl-source-stream": "^2.0.0",
-    "selenium-server-standalone-jar": "3.9.1"
+    "selenium-server-standalone-jar": "3.9.1",
+    "tslint": "^5.9.1",
+    "tslint-config-airbnb": "^5.7.0",
+    "typescript": "^2.7.2",
+    "vinyl-source-stream": "^2.0.0"
   },
   "babel": {
     "presets": [
