--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author":"Lucas Werner",
+  "author": "Lucas Werner",
   "repository": "https://github.com/lucaswerner90/modernjstemplate",
   "version": "1.0.0",
   "main": "index.js",
@@ -13,7 +13,11 @@
     "browserify": "^15.2.0",
     "chai": "^4.1.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-cli": "^2.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-server-livereload": "^1.9.2",
     "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^4.0.1",
     "jsdom": "^11.5.1",
